Update ALLOWED_HOSTS with site and development server URL

--- a/Parametr/templates/base_generic.html
+++ b/Parametr/templates/base_generic.html
@@ -376,8 +376,9 @@
 			</div>
 			<p id="parInequality"></p>
 			<div id="answers">
-				<span>answer = </span>
 				<math xmlns="http://www.w3.org/1998/Math/MathML">
+					<mi>x</mi>
+					<mo>&isin;</mo>
 					<mrow id="bracketMinusInfin" class="bracket">
 						<mo>(</mo>
 						<mn id="bracketNumber1">-&infin;</mn>
