--- a/Parametr/static/style.css
+++ b/Parametr/static/style.css
@@ -9,6 +9,14 @@
 	font-family: 'Lato', sans-serif;
 }
 
+.eng {
+	display: none;
+}
+
+#aboutDiv {
+	display: none;
+}
+
 /*| Navigation |*/
 
 nav{
@@ -58,11 +66,156 @@ nav ul ul{
 }
 nav ul ul li{float: none; position: relative;}
 nav ul ul li {
-	padding: 15px 30px; 
+	padding: 8px 20px; 
 	border-bottom: 1px solid rgba(0,0,0,.05);
 }
-nav ul ul ul {
+/*nav ul ul ul {
 	position: absolute; 
 	left: 100%; 
 	top:0;
 }	
+*/
+nav ul ul li .eng {
+	display: none;
+}
+/* buttonGenerate */
+#btnGenerate {
+	position: absolute;
+	top: 85px;
+	left: 10px;
+}
+
+/* переключатель языка */
+.checkbox-label {
+  transition: 0.25s ease-in-out;
+  display: block;
+  background: #f3f3f3;
+  height: 20px;
+  width: 40px;
+  border-radius: 50px;
+  margin: 30px auto;
+  position: absolute;
+  right: 60px;
+  box-shadow: 0 0 0 2px #dddddd;
+}
+.checkbox-label .on {
+  transition: 0.25s ease-in-out;
+  display: block;
+  position: absolute;
+  z-index: 0;
+  left: 0;
+  opacity: 1;
+  min-width: 50px;
+  line-height: 20px;
+  opacity: 0;
+  color: #13bf11;
+}
+.checkbox-label .off {
+  transition: 0.25s ease-in-out;
+  display: block;
+  position: absolute;
+  z-index: 0;
+  right: 50px;
+  text-align: right;
+  opacity: 1;
+  min-width: 60px;
+  line-height: 20px;
+  opacity: 1;
+  color: #bbbbbb;
+}
+.checkbox-label:before {
+  transition: 0.25s ease-in-out;
+  content: "";
+  display: block;
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  border-radius: 50px;
+  height: 20px;
+  width: 20px;
+  background: white;
+  box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2), 0 0 0 2px #dddddd;
+}
+
+.checkbox {
+  position: absolute;
+  left: -5000px;
+}
+.checkbox:checked + .checkbox-label {
+  background: #13bf11;
+  box-shadow: 0 0 0 2px #13bf11;
+}
+.checkbox:checked + .checkbox-label .on {
+  left: 50px;
+  opacity: 1;
+}
+.checkbox:checked + .checkbox-label .off {
+  right: 0px;
+  opacity: 0;
+}
+.checkbox:checked + .checkbox-label:before {
+  left: 20px;
+  box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2), 0 0 0 2px #13bf11;
+}
+/*button*/
+button {
+  position: relative;
+  display: inline-block;
+  background: none;
+  outline: none;
+  border: none;
+  padding: 0;
+  cursor: pointer;
+  color: #000;
+  text-transform: uppercase;
+  font-weight: 300;
+  letter-spacing: 0.05em;
+}
+button span {
+  position: relative;
+  z-index: 1;
+  display: block;
+  min-width: 1em;
+  padding: 0.5em;
+  border-radius: 2em;
+  background-color: #ffd;
+  border: 1px solid #ffd;
+  box-shadow: -1px 1px 5px rgba(0, 0, 0, 0.2);
+  transition: transform 0.1s, box-shadow 0.2s, background-color 0.2s;
+}
+button::after {
+  content: "";
+  position: absolute;
+  top: -0.5em;
+  bottom: -0.5em;
+  left: -0.5em;
+  right: -0.5em;
+  border-radius: 4em;
+  box-shadow: 0 0 0px rgba(0, 0, 0, 0.1), inset 0 0 0px rgba(0, 0, 0, 0.1);
+  transition: box-shadow 0.1s;
+}
+button:hover span, button:focus span {
+  background-color: #ffd;
+}
+button:active span {
+  background-color: #ffd;
+  transform: scale(0.97);
+  box-shadow: -2px 2px 5px rgba(0, 0, 0, 0.1);
+}
+button:active::after {
+  box-shadow: 0 0 2px rgba(0, 0, 0, 0.1), inset -3px 3px 1em rgba(0, 0, 0, 0.1);
+}
+
+
+.wrap {
+  display: inline-block;
+  width: 100%;
+  position: absolute;
+  top: 85px;
+  left: 10px;
+  /*transform: translate(-50%, -50%);*/
+}
+.wrap button {
+  margin: 1em;
+}
